--- a/pasta_cardapio/cardapio.css
+++ b/pasta_cardapio/cardapio.css
@@ -1,20 +1,22 @@
-*{
-    padding: 0 auto;
+body {
     box-sizing: border-box;
+    background-color: #fff8f0	;
+    color: #333;
+
 }
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
-    color: white;
+    background-color: #b22222	;
     padding: 10px 20px;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
+    box-sizing: border-box;
 
 }
 
@@ -22,6 +24,7 @@ header {
     font-size: 24px;
     font-weight: bold;
     color: white;
+    flex-shrink: 0;
 }
 
 
@@ -37,8 +40,9 @@ nav li {
 }
 
 nav a {
-    color: white;
     text-decoration: none;
+    color: white;
+
 }
 
 nav a:hover {
@@ -47,7 +51,10 @@ nav a:hover {
 
 .content {
     margin-top: 80px; /* espaço para o header fixo */
-    max-width: 1200px; /* você pode ajustar esse valor */
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto; /* centraliza horizontalmente */
+    padding: 20px;
 }
 
 section {
@@ -57,4 +64,24 @@ section {
 
 .preco{
     color: orangered;
+}
+
+button {
+    background-color: aliceblue;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+select {
+    background-color: aliceblue;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgb(248, 42, 42);
+}
+
+select:hover{
+    background-color: rgb(148, 148, 148);
 }
